# movie-recommendation-mvp

./: .gitignore  README.md  Readme.md  pyproject.toml
app/: __init__.py  deps.py  main.py
app/api/: __init__.py
reports/models/: ann_hnsw_items_v3.meta.json  ranker_hgb.pkl  ranker_hgb_v2.features.json  ranker_hgb_v2.meta.json  ranker_hgb_v2.pkl  ranker_hgb_v3_test.meta.json  ranker_hgb_v3_test.pkl  ranker_hgb_v3_val.meta.json  ranker_hgb_v3_val.pkl  sequence_gru_v3.meta.json  two_tower_v3.meta.json
scripts/: build_poster_cache_v4.py  build_posters_cache.py  demo_v2_service.py  demo_v3_feedback_flow.py  demo_v3_service.py  demo_v4_api.py  demo_v4_feedback_flow.py  demo_v4_service.py  download_movielens.py  eval_ranked_candidates.py  eval_ranked_candidates_v2.py  eval_ranked_candidates_v3.py  eval_ranked_candidates_v3_test.py  eval_ranked_candidates_v3_test_strict.py  eval_ranked_candidates_v4_test.py  eval_ranked_candidates_v4_val.py  eval_v1_5_candidates.py  eval_v1_baselines.py  eval_v2_candidates.py  eval_v3_candidates.py  eval_v3_sequence.py  eval_v3_sequence_candidates.py  eval_v3_two_tower.py  make_v3_test_pipeline.py  run_ui.py
src/config/: settings.py
src/data/: build_id_maps.py  create_duckdb.py  ingest_movielens.py  prepare_implicit_confidence.py  prepare_interactions.py  schemas.py
src/eval/: metrics.py  split.py  split_confidence.py
src/metadata/: __init__.py  poster_cache.py  tmdb_client.py
ui/: __init__.py  diversity_rerank.py  feedback_store.py  home_rows.py  poster_renderer.py  realtime_rerank.py  session_store.py  streamlit_app.py
(+63 files in other folders)
